[package]
name = "typst-assets"
description = "Assets for the Typst compiler."
categories = ["compilers"]
keywords = ["typst"]
version = "0.11.0"
authors = ["The Typst Project Developers"]
edition = "2021"
homepage = "https://typst.app"
repository = "https://github.com/typst/typst-assets"
license = "Apache-2.0"

[features]
fonts = []

[dependencies]
flate2 = "1"
tar = "0.4.41"

[build-dependencies]
flate2 = "1"
tar = "0.4"
